--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
         <input type="reset" value="Clear"><br>
         <big><marquee> This is a application for the students to share their problems against the education system</marquee></big>
         <br>
+                                         <!DOCTYPE html>
+<html>
+<body>
+
+<h2>HTML Forms</h2>
+
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="submit" value="Submit">
+</form> 
+
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+
+</body>
+</html>
+
         </center></div>
         <\body>
         <\html>
